# GKTimer

./: .gitignore  Cargo.toml  README.md  build.sh  package-lock.json  package.json  work_sessions.json.example
.github/workflows/: build.yml
icons/: icon.icns
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  main.rs  models.rs
