[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.dependencies]
tauri = { version = "1.5", features = ["fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
