[package]
name = "GKTimer"
version = "0.1.0"
description = "A modern work timer application built with Tauri and Rust"
authors = ["GenKnot"]
license = "MIT"
repository = "https://github.com/GenKnot/GKTimer"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
